@@ -11,4 +11,53 @@
                                directory="images"
                                permission="zope.Public" />
 
+   <browser:page 
+       for="Products.Archetypes.interfaces.IBaseObject"
+       name="image_large"
+       class=".default.ImageLarge"
+       permission="zope.Public"
+       />
+
+   <browser:page 
+       for="Products.Archetypes.interfaces.IBaseObject"
+       name="image_preview"
+       class=".default.ImagePreview"
+       permission="zope.Public"
+       />
+
+   <browser:page 
+       for="Products.Archetypes.interfaces.IBaseObject"
+       name="image_mini"
+       class=".default.ImageMini"
+       permission="zope.Public"
+       />
+
+   <browser:page 
+       for="Products.Archetypes.interfaces.IBaseObject"
+       name="image_tile"
+       class=".default.ImageTile"
+       permission="zope.Public"
+       />
+
+   <browser:page 
+       for="Products.Archetypes.interfaces.IBaseObject"
+       name="image_thumb"
+       class=".default.ImageThumb"
+       permission="zope.Public"
+       />
+
+   <browser:page 
+       for="Products.Archetypes.interfaces.IBaseObject"
+       name="image_icon"
+       class=".default.ImageIcon"
+       permission="zope.Public"
+       />
+
+   <browser:page 
+       for="Products.Archetypes.interfaces.IBaseObject"
+       name="image_listing"
+       class=".default.ImageListing"
+       permission="zope.Public"
+       />
+
 </configure>
